vbnc/vbnc/tests/Errors/33101-1.vb
Class A
    Shared Sub Main()
        Dim str As String?
    End Sub
End Class